feat(init): init

--- a/source/_posts/前端构建系列一.md
+++ b/source/_posts/前端构建系列一.md
@@ -19,8 +19,8 @@ categories:
 部署方式主要分为了以下几种，
 - 基于内网自有服务器的部署，主要使用宿主机nginx代理本机静态资源
 - 基于阿里云的部署
-    - mse网关代理oss静态资源
-    - ACK容器服务部署next的pod
+  - mse网关代理oss静态资源
+  - ACK容器服务部署next的pod
 - 基于 AWS 的容器化部署
 
 ### 改进方案
@@ -54,6 +54,8 @@ categories:
 
 
 上面展示了大致的目录结构（不重要的相关文件略去）。
+
+之前各个项目代码分散在不同的git仓库之中，导致了很多问题，如无法共享配置与规则、二方包无法共享等，当前前端的主流都在向monorepo方向发展，所以本次构建改造梳理，也是向着同样的趋势发展，所采用的技术栈主要是 [pnpm workspace](https://pnpm.io/zh/workspaces)以及 [turborepo](https://turbo.build/repo/docs)（不过鉴于目前的构建流程，turborepo 的许多缓存加速能力并没有用到，后续迭代再看）。
 
 #### 部署相关
 为了统一各个环境的部署任务，决定使用下面俩种方式
